proper use of alpine version; also disable 3.12 for requiring some apkbuild patches that I've removed

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        alpine_version: ["3.12", "3.13"]
+        alpine_version: ["3.13"]
         latest_alpine_version: ["3.13"]
     steps:
       - uses: actions/checkout@v2
