--- a/rust/APKBUILD
+++ b/rust/APKBUILD
@@ -64,9 +64,10 @@ options="!archcheck !check"
 
 subpackages="
 	$pkgname-dbg
-	$pkgname-aarch64
 	$pkgname-stdlib
+	$pkgname-stdlib-aarch64:_stdlib_aarch64
 	$pkgname-analysis
+	$pkgname-analysis-aarch64:_analysis_aarch64
 	$pkgname-gdb::noarch
 	$pkgname-lldb::noarch
 	$pkgname-doc
@@ -199,8 +200,6 @@ build() {
 		-e 's/#compression-formats = .*/compression-formats = ["gz"]/'
 	sed 's|deny(warnings,|deny(|' -i src/bootstrap/lib.rs
 	
-	cat config.toml
-	
 	_jobs=
 	[ -n "$JOBS" ] && _jobs="--jobs $JOBS"
 	$_python ./x.py dist -v $_jobs
@@ -230,20 +229,14 @@ package() {
 	mkdir -p "$pkgdir/usr"
 
 	cd "$pkgdir"
-
-	ls -lh "$builddir"/build/dist/*
 	
 	tar xf "$builddir"/build/dist/rustc-${pkgver}-${_target}.tar.gz \
 		-C "$pkgdir/usr" --strip-components=2 --exclude=manifest.in --no-same-owner
 	tar xf "$builddir"/build/dist/rust-std-${pkgver}-${_target}.tar.gz \
 		-C "$pkgdir/usr" --strip-components=2 --exclude=manifest.in --no-same-owner
-	tar xf "$builddir"/build/dist/rust-std-${pkgver}-${_aarch64}.tar.gz \
-		-C "$pkgdir/usr" --strip-components=2 --exclude=manifest.in --no-same-owner
 	tar xf "$builddir"/build/dist/rustc-dev-${pkgver}-${_target}.tar.gz \
 		-C "$pkgdir/usr" --strip-components=2 --exclude=manifest.in --no-same-owner
 	tar xf "$builddir"/build/dist/rust-analysis-${pkgver}-${_target}.tar.gz \
-		-C "$pkgdir/usr" --strip-components=2 --exclude=manifest.in --no-same-owner
-	tar xf "$builddir"/build/dist/rust-analysis-${pkgver}-${_aarch64}.tar.gz \
 		-C "$pkgdir/usr" --strip-components=2 --exclude=manifest.in --no-same-owner
 #	tar xf "$builddir"/build/dist/rust-analyzer-${pkgver}-${_target}.tar.gz \
 #		-C "$pkgdir/usr" --strip-components=2 --exclude=manifest.in --no-same-owner
@@ -277,14 +270,6 @@ package() {
 	fi
 }
 
-aarch64() {
-	pkgdesc="aarch64 target for Rust"
-	depends="gcc-aarch64"
-	
-	find "$pkgdir"/usr/lib/rustlib
-	_mv "$pkgdir"/usr/lib/rustlib/$_aarch64 "$subpkgdir"/usr/lib/rustlib/$_aarch64
-}
-
 stdlib() {
 	pkgdesc="Standard library for Rust (static rlibs)"
 	depends=
@@ -292,11 +277,30 @@ stdlib() {
 	_mv "$pkgdir"/$_rlibdir/*.rlib "$subpkgdir"/$_rlibdir/
 }
 
+_stdlib_aarch64() {
+	pkgdesc="Standard library for Rust (aarch64 target)"
+	depends="gcc-aarch64"
+	
+	mkdir -p "$subpkgdir/usr"
+	tar xf "$builddir"/build/dist/rust-std-${pkgver}-${_aarch64}.tar.gz \
+		-C "$subpkgdir/usr" --strip-components=2 --exclude=manifest.in --no-same-owner
+}
+
 analysis() {
 	pkgdesc="Compiler analysis data for the Rust standard library"
 	depends="$pkgname-stdlib=$pkgver-r$pkgrel"
 
 	_mv "$pkgdir"/$_rlibdir/../analysis "$subpkgdir"/${_rlibdir%/*}/
+}
+
+_analysis_aarch64() {
+	pkgdesc="Compiler analysis data for the Rust standard library (aarch64 target)"
+	depends="$pkgname-stdlib-aarch64=$pkgver-r$pkgrel"
+	install_if="$pkgname-stdlib-aarch64=$pkgver-r$pkgrel $pkgname-analysis=$pkgver-r$pkgrel"
+	
+	mkdir -p "$subpkgdir/usr"
+	tar xf "$builddir"/build/dist/rust-analysis-${pkgver}-${_aarch64}.tar.gz \
+		-C "$subpkgdir/usr" --strip-components=2 --exclude=manifest.in --no-same-owner
 }
 
 gdb() {
