--- a/rust/APKBUILD
+++ b/rust/APKBUILD
@@ -53,7 +53,7 @@ makedepends_build="
 	libssh2-dev
 	llvm$_llvmver-dev
 	llvm$_llvmver-test-utils
-	openssl-dev>3
+	openssl3-dev
 	python3
 	tar
 	xz-dev
@@ -63,7 +63,7 @@ makedepends_host="
 	curl-dev
 	libssh2-dev
 	llvm$_llvmver-dev
-	openssl-dev>3
+	openssl3-dev
 	zlib-dev
 "
 
