--- a/rust/APKBUILD
+++ b/rust/APKBUILD
@@ -141,6 +141,9 @@ build() {
 		export PKG_CONFIG_ALLOW_CROSS=1
 	fi
 
+	mkdir "$srcdir/local-rust-root"
+	"$srcdir/rust-$_bootver-x86_64-unknown-linux-musl/install.sh" --destdir="$srcdir/local-rust-root" --prefix=/usr
+
 	./configure \
 		--build="$_build" \
 		--host="$_target" \
@@ -148,7 +151,7 @@ build() {
 		--prefix="/usr" \
 		--release-channel="stable" \
 		--enable-local-rust \
-		--local-rust-root="/usr" \
+		--local-rust-root="$srcdir/local-rust-root/usr" \
 		--llvm-root="/usr/lib/llvm$_llvmver" \
 		--disable-docs \
 		--enable-extended \
